Tags div trocadas por tag Span

--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
                         <br>
                         Aperte Enter para adivinhar                
                         <br>           
-                        <div>Digite: <input type="text" name="campoNumero" placeholder="Digite aqui" id="numDigitado"></div>
+                        <span>Digite: <input type="text" name="campoNumero" placeholder="Digite aqui" id="numDigitado"></span>
                         <br>
-                        <div id="aviso">ACERTOUU!!!</div>
+                        <span id="aviso">ACERTOUU!!!</span>
+                        <span></span>
                    
                 </div>
-                </section>
+            </section>
         </div>  
     </body>
 </html>
