--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
                 <div class="fundoTexto">
                         Você pode adivinhar um número de 1 a 100
                         <br>
-                        Aperte Enter para adivinhar                
+                        Aperte o botão ou Enter para adivinhar                
                         <br>           
-                        <span>Digite: <input type="text" name="campoNumero" placeholder="Digite aqui" id="numDigitado"></span>
-                        <br>
+                        <span>Digite no campo: <input type="text" name="campoNumero" placeholder="Digite aqui" id="numDigitado"></span>
+                        <button type="button">ADIVINHAR</button>
+                        
                         <span id="aviso">ACERTOUU!!!</span>
                         <span id="numeroTentativas">Você tem 10 tentativas</span>
                 </div>
