--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 <div class="fundoTexto">
                         Você pode adivinhar um número de 1 a 100
                         <br>
-                        Aperte o botão ou Enter para adivinhar                
+                        Aperte o botão ou Enter              
                         <br>           
                         <span>Digite no campo: <input type="text" name="campoNumero" placeholder="Digite aqui" id="numDigitado"></span>
-                        <button type="button">ADIVINHAR</button>
+                        <button type="button" id="botaoAdivinhar">ADIVINHAR</button>
                         
                         <span id="aviso">ACERTOUU!!!</span>
                         <span id="numeroTentativas">Você tem 10 tentativas</span>
