--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         
                         <span id="aviso">ACERTOUU!!!</span>
                         <span id="numeroTentativas">Você tem 10 tentativas</span>
+                        <span>Tentativas: </span>
                 </div>
             </section>
         </div>  
