"Números tentados aparecem"

--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
                 <div class="fundoTexto">
                         Você pode adivinhar um número de 1 a 100
                         <br>
-                        Aperte o botão ou Enter              
-                        <br>           
                         <span>Digite no campo: <input type="text" name="campoNumero" placeholder="Digite aqui" id="numDigitado"></span>
                         <button type="button" id="botaoAdivinhar">ADIVINHAR</button>
                         
                         <span id="aviso">ACERTOUU!!!</span>
                         <span id="numeroTentativas">Você tem 10 tentativas</span>
-                        <span>Tentativas: </span>
+                        <span id="tentativas">Tentativas: </span>
                 </div>
             </section>
         </div>  
